// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TimeEstimationButton should render calculate text when no estimatedTime 1`] = `
<div>
  <div
    class="timeDisplay"
  >
    Estimate time
  </div>
</div>
`;

exports[`TimeEstimationButton should render correctly with estimatedTime 1`] = `
<div>
  <div
    class="timeDisplay"
  >
    60s
  </div>
</div>
`;
